--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,5 @@ cache:
   directories:
     - node_modules
 script:
-    - npm install -g serverless
     - "echo 'TRAVIS: true' >> serverless.env.yml"
-    - sls deploy
+    - npm run deploy
