--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mailgun-js": "^0.22.0",
     "moment": "^2.22.2",
     "yahoo-finance": "^0.3.5"
+  },
+  "scripts": {
+    "deploy": "serverless deploy"
   }
 }
