Rewrite to use promises

--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,10 @@
 [
   {
     "symbol": "IWDA.AS",
-    "threshold": "-0.1"
+    "threshold": -0.1
   },
   {
     "symbol": "IEMA.AS",
-    "threshold": "-0.1"
+    "threshold": -0.1
   }
 ]
