--- a/serverless.yml
+++ b/serverless.yml
@@ -20,13 +20,16 @@ custom:
         notifications:
           - protocol: email
             endpoint: ${file(serverless.env.yml):RECIPIENT_EMAIL, env:RECIPIENT_EMAIL}
+    definitions:
+      functionErrors:
+        period: 86400 # 1 day
+        treatMissingData: notBreaching
     alarms:
       - functionErrors
 
 functions:
   stock-alarms:
     handler: src/index.run
-    timeout: 1
     events:
       - schedule: rate(1 day)
 
