--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: stock-alarms
 provider:
   name: aws
   region: eu-west-1
-  runtime: nodejs8.10
+  runtime: nodejs12.x
   timeout: 5
   versionFunctions: false
   environment:
